welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:6: error: type mismatch;
 found   : Unit
 required: Int
    else if (speed>80) {return 2}
         ^caughtSpeeding:11: error: type mismatch;
 found   : Unit
 required: Int
    else if (speed>85) {return 2}
         ^